# twitch-chat-logger

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  config.ron.example
entity/: Cargo.toml
entity/src/: lib.rs  messages.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220904_144829_create_messages.rs  main.rs
src/: config.rs  error.rs  main.rs  process.rs  rollup.rs  server.rs  token.rs
